# dabelo_and_montee

./: .dockerignore  .env.prod  .env.sample  .gitignore  Dockerfile  Dockerfile.prod  db.sqlite3  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json  tailwind.config.js
accounts/: models.py  urls.py
accounts/views/: account_views.py  auth.py
admin_panel/: models.py  permissions.py  urls.py
admin_panel/services/: __init__.py  product_service.py
admin_panel/templatetags/: admin_extras.py
admin_panel/views/: admins.py  auth.py  categories.py  dashboard.py  orders.py  products.py  quotes.py
cart/: models.py  service.py  signals.py  urls.py  views.py
checkout/: admin.py  models.py  urls.py  views.py
checkout/services/: checkout.py  order.py  paystack.py
config/: __init__.py  settings.py  urls.py
config/settings/: __init__.py  base.py  dev.py  env.py  prod.py
core/: cache.py  celery.py  context_processors.py  email.py  seo.py  urls.py  views.py
core/utils/: decorators.py
images/: admin.py  apps.py  models.py  services.py  signals.py  storage.py  tasks.py  urls.py  utils.py
images/services/: image_service.py
images/templatetags/: image_tags.py
nginx/: nginx.prod.conf
products/: admin.py  models.py  service.py  services.py  signals.py  urls.py  views.py
scripts/: assets.sh
src/: db.sqlite3
src/config/: urls.py
src/core/: email.py  rate_limit.py  seo.py  urls.py  utils.py  views.py
static/css/: input.css  joint_home.css  product_detail.css  shop.css
static/js/: cart.js  checkout.js  checkout_confirm.js  (+2 more)
(+128 files in other folders)
